[package]
name = "cuda-backpressure"
version = "0.1.0"
edition = "2021"
description = "Backpressure — flow control, credit-based, window-based, and adaptive throttling for agent communication"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-backpressure"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
